--- a/index.html
+++ b/index.html
@@ -8,16 +8,11 @@
 </head>
 <body>
 
-  <!-- Header / Hero Section -->
+  <!-- Hero Section -->
   <header>
     <div>
       <img src="img/intel-header-logo.svg" alt="Intel Logo" />
-      <!-- Main Heading -->
-      <h1>
-        Sustainability Through the Ages
-      </h1>
-
-      <!-- Subheading / Description -->
+      <h1>Sustainability Through the Ages</h1>
       <p>
         Explore Intel's journey through time, discovering how our commitment
         to innovation has shaped a more sustainable future for technology 
@@ -26,166 +21,120 @@
     </div>
   </header>
 
-  <!-- Timeline Cards Section -->
+  <!-- Timeline Section -->
   <section>
-    <!-- Card 1: 1968 -->
+
     <div>
-      <h2>1968</h2>
-      <h3>Intel Founded</h3>
-      <img src="img/1.jpg" alt="Placeholder Image" />
-      <p>
-        Robert Noyce and Gordon Moore rename the newly formed company 
-        NM Electronics to Intel Corporation, laying the foundation for 
-        decades of technological innovation.
-      </p>
+      <div class="card-content">
+        <h2>1968</h2>
+        <h3>Intel Founded</h3>
+        <img src="img/1.jpg" alt="Intel Corporation founded in 1968" />
+        <p>
+          Robert Noyce and Gordon Moore rename NM Electronics to Intel Corporation, laying the foundation for decades of innovation.
+        </p>
+      </div>
+      <div class="card-overlay">Hover to View More</div>
     </div>
 
-    <!-- Card 2: 1971 -->
     <div>
-      <h2>1971</h2>
-      <h3>First Microprocessor</h3>
-      <img src="img/2.jpg" alt="Placeholder Image" />
-      <p>
-        Intel debuts the 4004, the world's first commercial microprocessor, 
-        igniting the microprocessor revolution and propelling the future 
-        of computing devices.
-      </p>
+      <div class="card-content">
+        <h2>1971</h2>
+        <h3>First Microprocessor</h3>
+        <img src="img/2.jpg" alt="Intel 4004 microprocessor" />
+        <p>
+          Intel debuts the 4004, the world's first commercial microprocessor, igniting the microprocessor revolution.
+        </p>
+      </div>
+      <div class="card-overlay">Hover to View More</div>
     </div>
 
-    <!-- Card 3: 1978 -->
     <div>
-      <h2>1978</h2>
-      <h3>8086 Processor</h3>
-      <img src="img/3.jpg" alt="Placeholder Image" />
-      <p>
-        Launch of the 8086 processor, establishing the x86 architecture 
-        that drives countless PCs and servers in the modern era.
-      </p>
+      <div class="card-content">
+        <h2>1978</h2>
+        <h3>8086 Processor</h3>
+        <img src="img/3.jpg" alt="Intel 8086 processor" />
+        <p>
+          Launch of the 8086 processor, establishing the x86 architecture that drives modern computing.
+        </p>
+      </div>
+      <div class="card-overlay">Hover to View More</div>
     </div>
 
-    <!-- Card 4: 1985 -->
     <div>
-      <h2>1985</h2>
-      <h3>386 Processor</h3>
-      <img src="img/4.jpg" alt="Placeholder Image" />
-      <p>
-        Intel introduces the 386 processor with 32-bit architecture, 
-        ushering in a new era of performance and multitasking for 
-        personal computers.
-      </p>
+      <div class="card-content">
+        <h2>1985</h2>
+        <h3>386 Processor</h3>
+        <img src="img/4.jpg" alt="Intel 386 processor" />
+        <p>
+          Intel introduces the 386 with 32-bit architecture, advancing multitasking performance in PCs.
+        </p>
+      </div>
+      <div class="card-overlay">Hover to View More</div>
     </div>
 
-    <!-- Card 5: 2006 -->
     <div>
-      <h2>2006</h2>
-      <h3>Peak GHG Emissions</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        This year marks Intel's highest annual greenhouse gas emissions 
-        for operations. Over subsequent years, Intel invests heavily in 
-        chemical abatement, renewable energy, and energy-efficient 
-        manufacturing to reverse this trend.
-      </p>
+      <div class="card-content">
+        <h2>2006</h2>
+        <h3>Peak GHG Emissions</h3>
+        <img src="img/5.jpg" alt="High greenhouse gas emissions from Intel operations" />
+        <p>
+          Intel hits its highest annual GHG emissions. It responds with strong investments in clean energy and efficiency.
+        </p>
+      </div>
+      <div class="card-overlay">Hover to View More</div>
     </div>
 
-    <!-- Card 6: 2020 -->
     <div>
-      <h2>2020</h2>
-      <h3>RISE Strategy</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        Intel launches its RISE (Responsible, Inclusive, Sustainable, 
-        Enabling) strategy and 2030 goals, aiming to drive industry-wide 
-        progress on climate action, water stewardship, and waste reduction.
-      </p>
+      <div class="card-content">
+        <h2>2020</h2>
+        <h3>RISE Strategy</h3>
+        <img src="img/6.jpg" alt="Intel's RISE strategy launch" />
+        <p>
+          Intel launches its RISE strategy and 2030 goals, promoting responsibility, inclusiveness, sustainability, and enablement.
+        </p>
+      </div>
+      <div class="card-overlay">Hover to View More</div>
     </div>
 
-    <!-- Card 7: 2022 -->
     <div>
-      <h2>2022</h2>
-      <h3>Net-Zero By 2040</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        Intel announces its commitment to achieve net-zero greenhouse 
-        gas emissions (Scope 1 and 2) across its global operations 
-        by 2040, building on years of environmental initiatives.
-      </p>
+      <div class="card-content">
+        <h2>2022</h2>
+        <h3>Net-Zero By 2040</h3>
+        <img src="img/7.jpg" alt="Intel net-zero pledge" />
+        <p>
+          Intel commits to achieving net-zero Scope 1 and 2 emissions across global operations by 2040.
+        </p>
+      </div>
+      <div class="card-overlay">Hover to View More</div>
     </div>
 
-    <!-- Card 8: 2023 -->
     <div>
-      <h2>2023</h2>
-      <h3>Renewable Electricity</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        The company achieves 99% renewable electricity usage worldwide, 
-        helping to drastically lower carbon emissions and driving progress 
-        toward Intel's long-term sustainability goals.
-      </p>
+      <div class="card-content">
+        <h2>2023</h2>
+        <h3>Renewable Electricity</h3>
+        <img src="img/8.jpg" alt="Intel reaches 99% renewable electricity" />
+        <p>
+          Intel achieves 99% renewable electricity usage worldwide, significantly reducing its carbon footprint.
+        </p>
+      </div>
+      <div class="card-overlay">Hover to View More</div>
     </div>
 
-    <!-- Card 9: 2024 -->
     <div>
-      <h2>2024</h2>
-      <h3>Sustainability Summit</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        Intel hosts its first Sustainability Summit, uniting suppliers, 
-        government officials, and industry leaders to collaborate on 
-        next-generation sustainable semiconductor manufacturing.
-      </p>
+      <div class="card-content">
+        <h2>2024</h2>
+        <h3>Sustainability Summit</h3>
+        <img src="img/9.jpg" alt="Intel Sustainability Summit 2024" />
+        <p>
+          Intel hosts its first Sustainability Summit, uniting leaders to drive the future of sustainable manufacturing.
+        </p>
+      </div>
+      <div class="card-overlay">Hover to View More</div>
     </div>
+
   </section>
 
-  <!-- 3-Column Content Section -->
-  <section>
-    <div>
-      
-      <!-- Column 1 -->
-      <div>
-        <h2>RISE Strategy</h2>
-        <p>
-          Under its RISE (Responsible, Inclusive, Sustainable, Enabling) strategy, 
-          Intel sets ambitious 2030 goals, including driving industry-wide 
-          progress on climate action, water stewardship, and waste reduction.
-        </p>
-        <!-- Learn More Button -->
-        <a href="#">Learn More</a>
-      </div>
+  <p>Scroll to view timeline | Hover over cards to learn more!</p>
 
-      <!-- Column 2 -->
-      <div>
-        <h2>Commitment</h2>
-        <p>
-          In 2022, Intel pledged to achieve net-zero greenhouse gas emissions 
-          (Scope 1 and 2) by 2040. This commitment builds on decades of 
-          environmental initiatives and partnerships across the semiconductor 
-          industry.
-        </p>
-        <!-- Learn More Button -->
-        <a href="#">Learn More</a>
-      </div>
-
-      <!-- Column 3 -->
-      <div>
-        <h2>Water &amp; Waste</h2>
-        <p>
-          Intel conserves billions of gallons of water annually and 
-          collaborates with local communities to restore watersheds.
-          Intel also upcycles and recycles materials to reduce waste and 
-          advance a circular economy.
-        </p>
-        <!-- Learn More Button -->
-        <a href="#">Learn More</a>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- Subscription Form -->
-  <section>
-    <h2>Subscribe to our Newsletter</h2>
-    <!-- Add form here -->
-  </section>
 </body>
 </html>
