--- a/index.html
+++ b/index.html
@@ -1,140 +1,126 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Intel: Sustainability Through the Ages</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <script>
+    function detectLanguageDirection() {
+      const rtlLangs = ['ar', 'he', 'fa', 'ur'];
+      const lang = document.documentElement.lang;
+      document.documentElement.dir = rtlLangs.includes(lang) ? 'rtl' : 'ltr';
+    }
+    window.onload = detectLanguageDirection;
+  </script>
 </head>
 <body>
 
   <!-- Hero Section -->
-  <header>
-    <div>
-      <img src="img/intel-header-logo.svg" alt="Intel Logo" />
+  <header class="bg-primary text-white text-center py-5">
+    <div class="container">
+      <img src="img/intel-header-logo.svg" alt="Intel Logo" class="mb-3" width="100">
       <h1>Sustainability Through the Ages</h1>
-      <p>
-        Explore Intel's journey through time, discovering how our commitment
-        to innovation has shaped a more sustainable future for technology 
-        and our planet.
+      <p class="lead">
+        Explore Intel's journey through time, discovering how our commitment to innovation has shaped a more sustainable future.
       </p>
     </div>
   </header>
 
   <!-- Timeline Section -->
-  <section>
-
+  <section class="d-flex overflow-auto gap-3 p-4">
+    <!-- Example Card -->
     <div>
-      <div class="card-content">
-        <h2>1968</h2>
-        <h3>Intel Founded</h3>
-        <img src="img/1.jpg" alt="Intel Corporation founded in 1968" />
-        <p>
-          Robert Noyce and Gordon Moore rename NM Electronics to Intel Corporation, laying the foundation for decades of innovation.
-        </p>
-      </div>
-      <div class="card-overlay">Hover to View More</div>
+      <h2>2022</h2>
+      <h3>Net-Zero By 2040</h3>
+      <img src="img/7.jpg" alt="Intel net-zero pledge" />
+      <p>
+        Intel commits to achieving net-zero Scope 1 and 2 emissions across global operations by 2040.
+      </p>
     </div>
-
-    <div>
-      <div class="card-content">
-        <h2>1971</h2>
-        <h3>First Microprocessor</h3>
-        <img src="img/2.jpg" alt="Intel 4004 microprocessor" />
-        <p>
-          Intel debuts the 4004, the world's first commercial microprocessor, igniting the microprocessor revolution.
-        </p>
-      </div>
-      <div class="card-overlay">Hover to View More</div>
-    </div>
-
-    <div>
-      <div class="card-content">
-        <h2>1978</h2>
-        <h3>8086 Processor</h3>
-        <img src="img/3.jpg" alt="Intel 8086 processor" />
-        <p>
-          Launch of the 8086 processor, establishing the x86 architecture that drives modern computing.
-        </p>
-      </div>
-      <div class="card-overlay">Hover to View More</div>
-    </div>
-
-    <div>
-      <div class="card-content">
-        <h2>1985</h2>
-        <h3>386 Processor</h3>
-        <img src="img/4.jpg" alt="Intel 386 processor" />
-        <p>
-          Intel introduces the 386 with 32-bit architecture, advancing multitasking performance in PCs.
-        </p>
-      </div>
-      <div class="card-overlay">Hover to View More</div>
-    </div>
-
-    <div>
-      <div class="card-content">
-        <h2>2006</h2>
-        <h3>Peak GHG Emissions</h3>
-        <img src="img/5.jpg" alt="High greenhouse gas emissions from Intel operations" />
-        <p>
-          Intel hits its highest annual GHG emissions. It responds with strong investments in clean energy and efficiency.
-        </p>
-      </div>
-      <div class="card-overlay">Hover to View More</div>
-    </div>
-
-    <div>
-      <div class="card-content">
-        <h2>2020</h2>
-        <h3>RISE Strategy</h3>
-        <img src="img/6.jpg" alt="Intel's RISE strategy launch" />
-        <p>
-          Intel launches its RISE strategy and 2030 goals, promoting responsibility, inclusiveness, sustainability, and enablement.
-        </p>
-      </div>
-      <div class="card-overlay">Hover to View More</div>
-    </div>
-
-    <div>
-      <div class="card-content">
-        <h2>2022</h2>
-        <h3>Net-Zero By 2040</h3>
-        <img src="img/7.jpg" alt="Intel net-zero pledge" />
-        <p>
-          Intel commits to achieving net-zero Scope 1 and 2 emissions across global operations by 2040.
-        </p>
-      </div>
-      <div class="card-overlay">Hover to View More</div>
-    </div>
-
-    <div>
-      <div class="card-content">
-        <h2>2023</h2>
-        <h3>Renewable Electricity</h3>
-        <img src="img/8.jpg" alt="Intel reaches 99% renewable electricity" />
-        <p>
-          Intel achieves 99% renewable electricity usage worldwide, significantly reducing its carbon footprint.
-        </p>
-      </div>
-      <div class="card-overlay">Hover to View More</div>
-    </div>
-
-    <div>
-      <div class="card-content">
-        <h2>2024</h2>
-        <h3>Sustainability Summit</h3>
-        <img src="img/9.jpg" alt="Intel Sustainability Summit 2024" />
-        <p>
-          Intel hosts its first Sustainability Summit, uniting leaders to drive the future of sustainable manufacturing.
-        </p>
-      </div>
-      <div class="card-overlay">Hover to View More</div>
-    </div>
-
+    <!-- Add more cards as needed -->
   </section>
 
-  <p>Scroll to view timeline | Hover over cards to learn more!</p>
+  <!-- Three-Column Section -->
+  <section class="container my-5">
+    <div class="row text-center">
+      <div class="col-md-4">
+        <i class="bi bi-globe2 fs-1 text-primary"></i>
+        <h4 class="mt-3">Global Reach</h4>
+        <p>Intel's commitment to sustainability spans continents, cultures, and communities.</p>
+        <a href="#" class="btn btn-outline-primary">Learn More</a>
+      </div>
+      <div class="col-md-4">
+        <i class="bi bi-recycle fs-1 text-success"></i>
+        <h4 class="mt-3">Circular Economy</h4>
+        <p>Recycling and reuse strategies power Intel's progress toward zero waste.</p>
+        <a href="#" class="btn btn-outline-success">Learn More</a>
+      </div>
+      <div class="col-md-4">
+        <i class="bi bi-lightning-charge fs-1 text-warning"></i>
+        <h4 class="mt-3">Clean Energy</h4>
+        <p>Investments in renewable energy drive our commitment to carbon neutrality.</p>
+        <a href="#" class="btn btn-outline-warning">Learn More</a>
+      </div>
+    </div>
+  </section>
 
+  <!-- Subscription Form -->
+  <section class="container my-5">
+    <h3 class="text-center mb-4">Subscribe to Our Sustainability Newsletter</h3>
+    <form class="row g-3 justify-content-center" aria-label="Newsletter Subscription">
+      <div class="col-auto">
+        <label for="email" class="visually-hidden">Email address</label>
+        <input type="email" class="form-control" id="email" placeholder="Enter email" required aria-required="true">
+      </div>
+      <div class="col-auto">
+        <button type="submit" class="btn btn-primary mb-3">Subscribe</button>
+      </div>
+    </form>
+  </section>
+
+  <!-- Accordion Section -->
+  <section class="container my-5">
+    <h3 class="text-center mb-4">Explore Key Sustainability Terms</h3>
+    <div class="accordion" id="sustainabilityAccordion">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+            Net-Zero Emissions
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#sustainabilityAccordion">
+          <div class="accordion-body">
+            A commitment to balance emitted greenhouse gases with equivalent offsets or removals from the atmosphere.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
+            Circular Economy
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#sustainabilityAccordion">
+          <div class="accordion-body">
+            A model aimed at eliminating waste and reusing resources efficiently.
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-dark text-white text-center py-4 mt-5">
+    <p class="mb-1">&copy; 2025 Intel Corporation. All rights reserved.</p>
+    <a href="#" class="text-white mx-2">Privacy Policy</a>
+    <a href="#" class="text-white mx-2">Terms of Use</a>
+    <a href="#" class="text-white mx-2">Contact</a>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
