--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Intel: Sustainability Through the Ages</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
-  <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="style.css" />
   <script>
     function detectLanguageDirection() {
       const rtlLangs = ['ar', 'he', 'fa', 'ur'];
@@ -17,7 +17,6 @@
   </script>
 </head>
 <body>
-
   <!-- Hero Section -->
   <header class="bg-primary text-white text-center py-5">
     <div class="container">
@@ -31,16 +30,60 @@
 
   <!-- Timeline Section -->
   <section class="d-flex overflow-auto gap-3 p-4">
-    <!-- Example Card -->
+    <div>
+      <h2>1968</h2>
+      <h3>Intel Founded</h3>
+      <img src="img/1.jpg" alt="Intel Corporation founded in 1968" />
+      <p>Robert Noyce and Gordon Moore rename NM Electronics to Intel Corporation, laying the foundation for decades of innovation.</p>
+    </div>
+    <div>
+      <h2>1971</h2>
+      <h3>First Microprocessor</h3>
+      <img src="img/2.jpg" alt="Intel 4004 microprocessor" />
+      <p>Intel debuts the 4004, the world's first commercial microprocessor, igniting the microprocessor revolution.</p>
+    </div>
+    <div>
+      <h2>1978</h2>
+      <h3>8086 Processor</h3>
+      <img src="img/3.jpg" alt="Intel 8086 processor" />
+      <p>Launch of the 8086 processor, establishing the x86 architecture that drives modern computing.</p>
+    </div>
+    <div>
+      <h2>1985</h2>
+      <h3>386 Processor</h3>
+      <img src="img/4.jpg" alt="Intel 386 processor" />
+      <p>Intel introduces the 386 with 32-bit architecture, advancing multitasking performance in PCs.</p>
+    </div>
+    <div>
+      <h2>2006</h2>
+      <h3>Peak GHG Emissions</h3>
+      <img src="img/5.jpg" alt="High greenhouse gas emissions from Intel operations" />
+      <p>Intel hits its highest annual GHG emissions. It responds with strong investments in clean energy and efficiency.</p>
+    </div>
+    <div>
+      <h2>2020</h2>
+      <h3>RISE Strategy</h3>
+      <img src="img/6.jpg" alt="Intel's RISE strategy launch" />
+      <p>Intel launches its RISE strategy and 2030 goals, promoting responsibility, inclusiveness, sustainability, and enablement.</p>
+    </div>
     <div>
       <h2>2022</h2>
       <h3>Net-Zero By 2040</h3>
       <img src="img/7.jpg" alt="Intel net-zero pledge" />
-      <p>
-        Intel commits to achieving net-zero Scope 1 and 2 emissions across global operations by 2040.
-      </p>
+      <p>Intel commits to achieving net-zero Scope 1 and 2 emissions across global operations by 2040.</p>
     </div>
-    <!-- Add more cards as needed -->
+    <div>
+      <h2>2023</h2>
+      <h3>Renewable Electricity</h3>
+      <img src="img/8.jpg" alt="Intel reaches 99% renewable electricity" />
+      <p>Intel achieves 99% renewable electricity usage worldwide, significantly reducing its carbon footprint.</p>
+    </div>
+    <div>
+      <h2>2024</h2>
+      <h3>Sustainability Summit</h3>
+      <img src="img/9.jpg" alt="Intel Sustainability Summit 2024" />
+      <p>Intel hosts its first Sustainability Summit, uniting leaders to drive the future of sustainable manufacturing.</p>
+    </div>
   </section>
 
   <!-- Three-Column Section -->
